modified drone model

--- a/models/my_drone/model.config
+++ b/models/my_drone/model.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <model>
-  <name>Iris with Standoffs</name>
+  <name>Personalized drone</name>
   <version>1.0</version>
   <sdf version="1.6">model.sdf</sdf>
 
@@ -28,7 +28,7 @@
   <description>
     A copy of the 3DR Iris model taken from
     https://github.com/PX4/sitl_gazebo/tree/master/models
-    Local modifications include adding standoffs,
+    Local modifications include poses,
     inertia and collision updates..
   </description>
 </model>
