--- a/models/my_drone_with_ardupilot/model.config
+++ b/models/my_drone_with_ardupilot/model.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <model>
-  <name>Iris with Standoffs and Camera LiftDrag ArduCopter Plugins</name>
+  <name>Personalized drone with ArduCopter Plugins</name>
   <version>1.0</version>
   <sdf version="1.6">model.sdf</sdf>
 
@@ -26,18 +26,17 @@
 
 
   <description>
-    starting with iris_with_standoffs
+    starting with my_drone
     add LiftDragPlugin
     add ArduCopterPlugin
-    attach gimbal_small_2d model with GimbalSmall2dPlugin
   </description>
-  <depend>
+  <!--depend>
     <model>
       <uri>model://my_gimbal_small_2d</uri>
       <version>1.0</version>
     </model>
-    <model>
-      <uri>model://my_drone_with_standoffs</uri>
+    <model-->
+      <uri>model://my_drone</uri>
       <version>1.0</version>
     </model>
   </depend>
